fixed modal width on tablets

--- a/client/src/styles/components/PostCommentsModal.css
+++ b/client/src/styles/components/PostCommentsModal.css
@@ -78,8 +78,11 @@
 }
 
 @media (max-width: 900px) {
+  .modal-content {
+    min-width: 85vw;
+  }
   .post-comments-modal-ul {
-    width: 80%;
+    width: 85%;
   }
 }
 
